[package]
name = "amicontained"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = {version = "0.2.153", default-features = false}

[profile.release]
lto = "thin"